[package]
name = "microbit-projects"
version = "0.1.0"
edition = "2021"
authors = ["Ben Brandt <benjamin.j.brandt@gmail.com>"]
description = "Experiments using Rust and embassy to write programs to run on a micro:bit v2"
repository = "https://github.com/benbrandt/microbit-projects"
license = "MIT"
keywords = ["embedded", "embassy", "microbit"]
categories = ["embedded"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.2", features = [
    "defmt-timestamp-uptime",
    "defmt",
] }
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp", version = "0.4.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }


[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[lints.clippy]
cargo = "warn"
pedantic = "warn"

[profile.release]
debug = 2
